--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset= "UTF-8">
-    <title>Building a Wireframe title</title>
+    <title>Erin Kenney </title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
