--- a/portfolio.html
+++ b/portfolio.html
@@ -47,9 +47,9 @@
 
         <!-- First of two columns -->
 			  <div class="col-md-6">
-          <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-          
-          <h3>Word Guess</h3>
+          <a href="https://github.com/Erinkenneyco/psychic-game"><img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess"></a>
+
+            <h3>Crystal Ball Psychic Game</h3>
         </div>
   
         <!-- Second of two columns -->
