--- a/portfolio.html
+++ b/portfolio.html
@@ -47,16 +47,18 @@
 
         <!-- First of two columns -->
 			  <div class="col-md-6">
-          <a href="https://erinkenneyco.github.io/psychic-game/"><img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess"></a>
+          <a href="https://erinkenneyco.github.io/psychic-game/">
+            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess"></a>
 
             <h3>Crystal Ball Psychic Game</h3>
         </div>
   
         <!-- Second of two columns -->
         <div class="col-md-6">
+            <a href= "https://erinkenneyco.github.io/unit-4-game/">
             <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-            
-              <h3>RPG Game</h3>
+              
+              <h3>Crystal Collectors Game</h3>
         </div>
 
       <!-- Third Row -->
