updated profile with link to train scheduler

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,8 +77,8 @@
           </div>
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper 
-              Scissors">
+              <img class="img-fluid port-image" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+              <a href= "https://erinkenneyco.github.io/choo-choo-train-scheduler/"target="_blank">Train Scheduler</a>
 
             </div>
           </div>
