updating profile pics and adding social media icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,33 +17,33 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand" href="index.html" id="logo">Erin Kenney</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">About</a>
-              </li>
-            </ul>
-          </div>
-          <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-      </nav>
-      <!-- End of navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <a class="navbar-brand" href="index.html" id="logo">Erin Kenney</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <!-- End of navbar -->
 
   <!-- Start of container -->
   <div class="container">
@@ -54,32 +54,37 @@
           <hr />
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-              <a href="https://erinkenneyco.github.io/psychic-game/"target="_blank">Crystal Ball Psychic Game</a>
-              
+              <img class="img-fluid port-image" src="assets/images/psychic game screenshot.PNG" alt="Word Guess">
+              <a href="https://erinkenneyco.github.io/psychic-game/" target="_blank">Crystal Ball Psychic Game</a>
+
             </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-              <a href= "https://erinkenneyco.github.io/unit-4-game/" target="_blank">Crystal Collectors Game</a>
+              <img class="img-fluid port-image" src="assets/images/crystal collectors screenshot.PNG" alt="Collector Game">
+              <a href="https://erinkenneyco.github.io/unit-4-game/" target="_blank">Crystal Collectors Game</a>
             </div>
           </div>
 
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-              <a href= "https://erinkenneyco.github.io/TriviaGame/"target= "_blank">Trivia Game</a>
+              <img class="img-fluid port-image" src="assets/images/trivia game screenshot.PNG" alt="Trivia Game">
+              <a href="https://erinkenneyco.github.io/TriviaGame/" target="_blank">Trivia Game</a>
             </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-              <a href= "https://erinkenneyco.github.io/GifTastic/"target= "_blank" >GifTastic</a>
 
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <img class="img-fluid port-image" src="assets/images/giftastic screenshot.PNG" alt="Giftastic">
+              <a href="https://erinkenneyco.github.io/GifTastic/" target="_blank">GifTastic</a>
             </div>
           </div>
+
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-              <a href= "https://erinkenneyco.github.io/choo-choo-train-scheduler/"target="_blank">Train Scheduler</a>
+              <img class="img-fluid port-image" src="assets/images/train scheduler screenshot.PNG" alt="Train Scheduler">
+              <a href="https://erinkenneyco.github.io/choo-choo-train-scheduler/" target="_blank">Train Scheduler</a>
+            </div>
 
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <img class="img-fluid port-image" src="assets/images/Effortless Adventure screenshot.PNG" alt="Project-1 effortless adventure">
+              <a href="https://kmalillos.github.io/Effortless-Adventure/" target="_blank">Effortless Adventure</a>
             </div>
           </div>
         </article>
@@ -92,7 +97,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
-      &copy; Copyright 2018 Erin Kenney 
+      &copy; Copyright 2018 Erin Kenney
     </p>
   </footer>
   <!-- End of footer -->
