--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,13 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="index.html">About</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -54,44 +54,39 @@
           <hr />
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/psychic game screenshot.PNG" alt="Word Guess">
-              <a href="https://erinkenneyco.github.io/psychic-game/" target="_blank">Crystal Ball Psychic Game</a>
-
+               <a href="https://erinkenneyco.github.io/psychic-game/" target="_blank"><img class="img-fluid port-image" src="assets/images/psychic game screenshot.PNG" alt="Word Guess"></a> <h2>Psychic Game</h2>
+              
             </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/crystal collectors screenshot.PNG" alt="Collector Game">
-              <a href="https://erinkenneyco.github.io/unit-4-game/" target="_blank">Crystal Collectors Game</a>
+            <div class="col-sm-6 col-md-12 col-lg-6  ">
+              <a href="https://erinkenneyco.github.io/unit-4-game/" target="_blank"><img class="img-fluid port-image" src="assets/images/crystal collectors screenshot.PNG" alt="Collector Game"></a> <h2>Crystal Collector</h2>
             </div>
           </div>
-
+              <br> </br>
           <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/trivia game screenshot.PNG" alt="Trivia Game">
-              <a href="https://erinkenneyco.github.io/TriviaGame/" target="_blank">Trivia Game</a>
+            <div class="col-sm-6 col-md-12 col-lg-6  ">
+              <a href="https://erinkenneyco.github.io/TriviaGame/" target="_blank"><img class="img-fluid port-image" src="assets/images/trivia game screenshot.PNG" alt="Trivia Game"></a><h2>Trivia Game</h2>
             </div>
-
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/giftastic screenshot.PNG" alt="Giftastic">
-              <a href="https://erinkenneyco.github.io/GifTastic/" target="_blank">GifTastic</a>
+              
+            <div class="col-sm-6 col-md-12 col-lg-6 ">
+               <a href="https://erinkenneyco.github.io/GifTastic/" target="_blank"><img class="img-fluid port-image" src="assets/images/giftastic screenshot.PNG" alt="Giftastic"></a> <h2>Giftastic</h2> 
             </div>
           </div>
-
+              <br> </br>
           <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/train scheduler screenshot.PNG" alt="Train Scheduler">
-              <a href="https://erinkenneyco.github.io/choo-choo-train-scheduler/" target="_blank">Train Scheduler</a>
+            <div class="col-sm-6 col-md-12 col-lg-6 ">
+              <a href="https://erinkenneyco.github.io/choo-choo-train-scheduler/" target="_blank">  <img class="img-fluid port-image" src="assets/images/train scheduler screenshot.PNG" alt="Train Scheduler"></a> <h2>Train Scheduler</h2>
             </div>
 
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets/images/Effortless Adventure screenshot.PNG" alt="Project-1 effortless adventure">
-              <a href="https://kmalillos.github.io/Effortless-Adventure/" target="_blank">Effortless Adventure</a>
+              <a href="https://kmalillos.github.io/Effortless-Adventure/" target="_blank">  <img class="img-fluid port-image" src="assets/images/Effortless Adventure screenshot.PNG" alt="Project-1 effortless adventure"></a> <h2>Effortless Adventure</h2>
             </div>
           </div>
         </article>
       </div>
     </main>
   </div>
-  <!-- End of container -->
+  <br> </br>
+  <!-- End of container  640 by 480 image sizes--> 
 
   <!-- Start of footer -->
   <footer class="footer">
