--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
+  <link rel="icon" href="assets/images/download (1).png" type="image/png" sizes="16x16">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
