--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
 <head>
 
   <meta charset="UTF-8">
+  <link rel="icon" href="assets/images/download (1).png" type="image/png" sizes="16x16">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Bootstrap Basic Portfolio</title>
+  <title>Contact | Erin Kenney</title>
 
   <!-- Boostrap Stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
