added a portfolio piece Liri Bot

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
               <br> </br>
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6 ">
-              <a href="https://erinkenneyco.github.io/choo-choo-train-scheduler/" target="_blank">  <img class="img-fluid port-image" src="assets/images/train scheduler screenshot.PNG" alt="Train Scheduler"></a> <h2>Train Scheduler</h2>
+              <a href="https://github.com/Erinkenneyco/liri-node-app" target="_blank">  <img class="img-fluid port-image" src="assets/images/Liri-Bot.PNG" alt="Liri Bot"></a> <h2>Liri Bot</h2>
             </div>
 
             <div class="col-sm-6 col-md-12 col-lg-6">
