--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio2.html">Portfolio2</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link" href="index.html">About</a>
           </li>
+          
         </ul>
       </div>
       <!-- /.navbar-collapse -->
@@ -61,8 +65,7 @@
           <p>I cannot wait to learn more about full-stack development! I am very excited to be a part of a field that will always be growing and changing. I will soon be able to help your company have a complete online presence from front-end to back-end to servers and databases.
           </p>
           <br />
-          <p>I am a person who loves her family and feels the most grounded when surrounded by the ones I love. I have a five-year-old step-daughter who keeps me on my toes and I enjoy nothing more than watching the wonder in her eyes for every new experience she has. 
-          </p>
+          
         </article>
       </div>
     </section>
