--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,12 @@
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="portfolio2.html">Portfolio2</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+          
         </ul>
       </div>
       <!-- /.navbar-collapse -->
