adding friend finder app

--- a/portfolio2.html
+++ b/portfolio2.html
@@ -69,7 +69,7 @@
               <br> </br>
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6  ">
-              <a href="" target="_blank"><img class="img-fluid port-image" src="" alt=""></a><h2></h2>
+              <a href="https://gentle-scrubland-47257.herokuapp.com/" target="_blank"><img class="img-fluid port-image" src="assets/images/friendfinder.PNG" alt="FriendFinder app"></a><h2>Friend Finder</h2>
             </div>
               
             <div class="col-sm-6 col-md-12 col-lg-6 ">
