adding link to profile eff-adv

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
             </div>
 
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <a href="https://kmalillos.github.io/Effortless-Adventure/" target="_blank"> <img
+              <a href="https://erinkenneyco.github.io/eff-adv/" target="_blank"> <img
                   class="img-fluid port-image" src="assets/images/Effortless Adventure screenshot.PNG"
                   alt="Project-1 effortless adventure"></a>
               <h2>Effortless Adventure</h2>
